Document data validation library

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       width: 25%;
       max-width: 100%;
     }
+    section.content {
+      max-width: 760px;
+    }
   </style>
 </head>
 <body>
