Document data validation library

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     section.content {
       max-width: 760px;
     }
+    .sidebar {
+      background: #f8f8f8;
+    }
   </style>
 </head>
 <body>
