Changed text alignment

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     }
     section.content {
       max-width: 760px;
+      text-align: justify;
     }
     .sidebar {
       background: #f8f8f8;
