--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
-  <link rel="icon" href="_media/favicon-32x32.png">
+  <link rel="icon" href="_media/logo.ico">
   <style>
-    .cover-main .anchor span {color: #FFF;} 
-    .cover-main blockquote {color: #FFF;}
+    .cover-main .anchor span {
+      color: #FFF;
+    }
+
+    .cover-main blockquote {
+      color: #FFF;
+    }
+
     /* .cover.show {
       background-color: #000000 !important;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23220000' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23440000' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%23660000' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23880000' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%23A00' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E") !important;
@@ -23,25 +31,65 @@
       background-attachment: fixed !important;
       background-size: cover !important;
     }
-    section.cover .cover-main > p:last-child a { color: #fff; border-color: #fff;}
-    section.cover .cover-main > p:last-child a:hover {color: #fff;}
-    section.cover .cover-main > p:last-child a:last-child {background-color: #fff; color: #ee0000}
-    section.cover .cover-main > p:last-child a:last-child:hover {background-color: #fff; color: #ee0000;}
-    h1.app-name {color: #ee0000;}
-    .sidebar ul li a {color: #000;} 
+
+    section.cover .cover-main>p:last-child a {
+      color: #fff;
+      border-color: #fff;
+    }
+
+    section.cover .cover-main>p:last-child a:hover {
+      color: #fff;
+    }
+
+    section.cover .cover-main>p:last-child a:last-child {
+      background-color: #fff;
+      color: #ee0000
+    }
+
+    section.cover .cover-main>p:last-child a:last-child:hover {
+      background-color: #fff;
+      color: #ee0000;
+    }
+
+    h1.app-name {
+      color: #ee0000;
+    }
+
+    .sidebar ul li a {
+      color: #000;
+    }
+    .sidebar li>p {
+      text-transform: uppercase;
+    }
     .app-name-link img {
-      width: 25%;
+      width: 70%;
       max-width: 100%;
     }
+
     section.content {
       max-width: 760px;
       text-align: justify;
     }
+
     .sidebar {
       background: #f8f8f8;
     }
+
+    .sidebar>h1 {
+      margin: 0 auto 1rem;
+      font-size: 1.5rem;
+      font-weight: 300;
+    }
+
+    .sidebar>h1 a {
+      color: inherit;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+    }
   </style>
 </head>
+
 <body>
   <div id="app"></div>
   <script>
@@ -62,4 +110,5 @@
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-sql.min.js"></script>
 </body>
+
 </html>
