--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       // coverpage: true,
       // onlyCover: true,
       loadSidebar: true,
-      subMaxLevel: 1,
+      subMaxLevel: 4,
       autoHeader: true,
       routerMode: 'hash',
       themeColor: '#3F51B5',
@@ -129,7 +129,7 @@
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-sql.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
-  <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script>
+  <!-- <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script> -->
 </body>
 
 </html>
