feat: add new SVG logos and adjust logo styling in docs

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       text-transform: uppercase;
     }
     .app-name-link img {
-      width: 70%;
-      max-width: 100%;
+      width: 130px;
+      margin-left: 5px;
     }
 
     section.content {
@@ -108,12 +108,12 @@
   <script>
     window.$docsify = {
       name: 'Lightpack',
-      logo: '/_media/logo.png',
+      logo: '/_media/logo-text.svg',
       repo: '',
       // coverpage: true,
       // onlyCover: true,
       loadSidebar: true,
-      subMaxLevel: 4,
+      subMaxLevel: 3,
       autoHeader: true,
       routerMode: 'hash',
       themeColor: '#3F51B5',
