style: update theme color and code text color to red (#ef5350)

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
   <link rel="icon" href="_media/logo.ico">
 
   <style>
+    :root {
+        --theme-color: #ef5350 !important;
+    }
     body {
       /* font-size: 1.1rem; */
     }
 
     .markdown-section code {
       /* font-weight: bold; */
+      color: #ef5350;
     }
 
     .page_toc p.title {
